# youtube-thumbnail-generator

./: .gitignore  README.md  api guide  build_config.py  build_executable.bat  install_and_run.bat  install_and_run.sh  main.py  package-lock.json  package.json  prd_document.prd.md  project.prd.txt  pyproject.toml  readme.md.txt  readme_document.md  rules.rules.txt  rules_document.rules.md  setup.py  tailwind.config.js  vercel.json  version_info.txt  광고 코드.txt
.claude/: settings.local.json
components/: AdBanner.tsx  AdSenseInit.tsx  ApiGuideModal.tsx  ThumbnailGenerator.tsx
pages/: _app.tsx  _document.tsx  index.tsx
pages/api/: generate-thumbnails.ts
src/: __init__.py
src/api/: __init__.py  client.py  filters.py
src/database/: __init__.py  manager.py  models.py
src/gui/: __init__.py  main_window.py  styles.py  widgets.py
src/utils/: __init__.py  config.py  exporter.py  helpers.py  logger.py  validators.py
src/workers/: __init__.py  search_worker.py
styles/: globals.css
